--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,8 +3,8 @@
 
 /** Ionic CSS Variables **/
 :root {
-  --ion-background-color: #f4f0fa;
-  --ion-toolbar-background: #f4f0fa;
+  --ion-background-color: #ffffff;
+  --ion-toolbar-background: #d5dbfc;
   /** primary **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
@@ -14,7 +14,7 @@
   --ion-color-primary-tint: #4c8dff;
 
   /** secondary **/
-  --ion-color-secondary: #3dc2ff;
+  --ion-color-secondary: #6d6d6d;
   --ion-color-secondary-rgb: 61, 194, 255;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
