--- a/src/app/tablinks/tablinks.page.html
+++ b/src/app/tablinks/tablinks.page.html
@@ -23,14 +23,19 @@
       <ion-label>Home</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="request-aid">
-      <ion-icon name="cash-outline"></ion-icon>
-      <ion-label>Request Aid</ion-label>
+    <ion-tab-button tab="find-jobs">
+      <ion-icon name="briefcase-outline"></ion-icon>
+      <ion-label>Find Jobs</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="schedule">
       <ion-icon name="calendar-outline"></ion-icon>
       <ion-label>Schedule</ion-label>
+    </ion-tab-button>
+    
+    <ion-tab-button tab="request-aid">
+      <ion-icon name="cash-outline"></ion-icon>
+      <ion-label>Request Aid</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="donate">
