--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,8 +3,10 @@
 
 /** Ionic CSS Variables **/
 :root {
-  --ion-background-color: #ffffff;
-  --ion-toolbar-background: #d5dbfc;
+  --ion-background-color: #EEEEEE;
+  --ion-toolbar-background: #ffffff;
+  --ion-tab-bar-background: #ffffff;
+  --ion-card-background: #ffffff;
   /** primary **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
