--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,6 @@
-<ion-header></ion-header>
 <ion-content padding>
   <ion-text>
-    Whats New
+    WHATS NEW
   </ion-text>
 
   <ion-slides [options]="{ slidesPerView: 'auto', scrollbar: true, zoom: false, grabCursor: true }">
@@ -25,23 +24,27 @@
   <ion-row>
     <ion-col>
       <div class="flex-container">
-        <ion-text>
-          About Us
-        </ion-text>
+        <ion-title>
+          ABOUT US
+        </ion-title>
       </div>
     </ion-col>
+  </ion-row>
+  <ion-row>
     <ion-col>
-      <img src="./assets/yellowLine.png" />
+      <div class="flex-container">
+        <img src="./assets/yellowLine.png" />
+      </div>
     </ion-col>
   </ion-row>
 
-  <ion-content padding>
+  <ion-content  padding>
     <ion-slides [options]="{ slidesPerView: 'auto', scrollbar: true, zoom: false, grabCursor: true }">
       <ion-slide style="border: 10px">
         <ion-col>
           <ion-card style="height: 400px">
             <ion-card-header>
-              <ion-card-title>What We Do</ion-card-title>
+              <ion-card-title>WHAT WE DO</ion-card-title>
             </ion-card-header>
             <ion-card-content>
               International students are struggling with all the recent uncertainty around policy changes and the threat of deportation, many don't know where to turn.
@@ -57,7 +60,7 @@
         <ion-col>
           <ion-card style="height: 400px">
             <ion-card-header>
-              <ion-card-title>Our Founders</ion-card-title>
+              <ion-card-title>OUR FOUNDERS</ion-card-title>
             </ion-card-header>
             <ion-row>
               <ion-col>
@@ -88,4 +91,197 @@
       </ion-slide>
     </ion-slides>
     
+    <ion-row>
+      <ion-col>
+        <div class="flex-container">
+          <img src="./assets/shapes.svg" />
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div class="flex-container">
+          <ion-title>
+            FAMOUS IMMIGRANTS
+          </ion-title>
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div class="flex-container">
+          <ion-subtitle>
+            IN U.S. HISTORY
+          </ion-subtitle>
+        </div>
+      </ion-col>
+      <ion-col>
+        <img src="./assets/yellowLine.png" />
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div class="flex-container">
+          <ion-text>
+            In the past, we have always drawn strength from the brightest and most dedicated people coming here and reaching for the American dream. Many of the world's most productive scientists and engineers are foreign-born, so the United States is always at the forefront of global innovation.  Here are some you may already know:
+          </ion-text>
+        </div>
+      </ion-col>
+    </ion-row>
 
+    <ion-content  padding>
+      <ion-slides [options]="{ slidesPerView: 'auto', scrollbar: true, zoom: false, grabCursor: true }">
+        <ion-slide style="border: 10px">
+          <ion-col>
+            <ion-card style="height: 700px">
+              <img src="./assets/albertEinstein.png" />
+              <ion-card-header>
+                <ion-card-title>ALBERT EINSTEIN</ion-card-title>
+              </ion-card-header>
+              <ion-card-subheader>
+                GERMANY
+              </ion-card-subheader>
+              <ion-card-content>
+                One of the most recognized and well-known scientists of the century.
+                His theories solved centuries-old-problems in physics and rocked even non-physicists' view of the world. E= mc2
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+  
+        <ion-slide style="border: 10px">
+          <ion-col>
+            <ion-card style="height: 700px">
+              <img src="./assets/nikolaTesla.png" />
+              <ion-card-header>
+                <ion-card-title>NIKOLA TESLA</ion-card-title>
+              </ion-card-header>
+              <ion-card-subheader>
+                SERBIA
+              </ion-card-subheader>
+              <ion-card-content>
+                Futurist who illuminated the earth electrically bright due to his immense contributions in designing the very back-bone of every modern electric supply of today – the alternating current.
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+
+        <ion-slide style="border: 10px">
+          <ion-col>
+            <ion-card style="height: 700px">
+              <img src="./assets/bobMarley.png" />
+              <ion-card-header>
+                <ion-card-title>BOB MARLEY</ion-card-title>
+              </ion-card-header>
+              <ion-card-subheader>
+                JAMAICA
+              </ion-card-subheader>
+              <ion-card-content>
+                Considered one of the pioneers of reggae music. Bob was a freedom fighter he used his Pen instead of gun. He fought for freedom, peace, and equal rights. Marley received The United Nations Peace Medal. Marley’s “One Love” was proclaimed as Song of the Millennium.
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+
+        <ion-slide style="border: 10px">
+          <ion-col>
+            <ion-card style="height: 700px">
+              <img src="./assets/gertyCori.png" />
+              <ion-card-header>
+                <ion-card-title>GERTY CORI</ion-card-title>
+              </ion-card-header>
+              <ion-card-subheader>
+                CZECH
+              </ion-card-subheader>
+              <ion-card-content>
+                Carbohydrate research not only led to the development of treatments for diabetes, it also made them winners of the 1947 Nobel Prize in physiology or medicine, and Gerty the first American woman Nobel laureate in science.
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+
+        <ion-slide style="border: 10px">
+          <ion-col>
+            <ion-card style="height: 700px">
+              <img src="./assets/mariaMayner.png" />
+              <ion-card-header>
+                <ion-card-title>MARIA MAYNER</ion-card-title>
+              </ion-card-header>
+              <ion-card-subheader>
+                GERMANY
+              </ion-card-subheader>
+              <ion-card-content>
+                German-born American theoretical physicist, and Nobel laureate in Physics for proposing the nuclear shell model of the atomic nucleus. She was the second woman to win a Nobel Prize in physics, the first being Marie Curie.
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+
+        <ion-slide style="border: 10px">
+          <ion-col>
+            <ion-card style="height: 700px">
+              <img src="./assets/ceciliaPayne.png" />
+              <ion-card-header>
+                <ion-card-title>CECILIA PAYNE</ion-card-title>
+              </ion-card-header>
+              <ion-card-subheader>
+                ENGLAND
+              </ion-card-subheader>
+              <ion-card-content>
+                Cecilia Payne discovered that stars are made largely of the two lightest chemical elements – hydrogen and helium. She was the most eminent female astronomer of her time, the first to be appointed full professor at Harvard University, and the first to chair a department.
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+
+        <ion-slide style="border: 10px">
+          <ion-col>
+            <ion-card style="height: 700px">
+              <img src="./assets/chien-shiungWu.png" />
+              <ion-card-header>
+                <ion-card-title>CHIEN-SHIUNG WU</ion-card-title>
+              </ion-card-header>
+              <ion-card-subheader>
+                CHINA
+              </ion-card-subheader>
+              <ion-card-content>
+                Chinese-American nuclear physicist Chien-Shiung Wu, also known as "the First Lady of Physics,” contributed to the Manhattan Project and made history with an experiment that disproved the hypothetical law of conservation of parity.
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+
+        <ion-slide style="border: 10px">
+          <ion-col>
+            <ion-card style="height: 700px">
+              <img src="./assets/hedyLamarr.png" />
+              <ion-card-header>
+                <ion-card-title>HEDY LAMARR</ion-card-title>
+              </ion-card-header>
+              <ion-card-subheader>
+                AUSTRIA
+              </ion-card-subheader>
+              <ion-card-content>
+                Frequency hopping a way of jumping around on radio frequencies in order to avoid a third party jamming your signal. Avid inventor and the person behind advances advances in communication technology that led to today’s Wi-Fi, GPS, and Bluetooth.
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+
+        <ion-slide style="border: 10px">
+          <ion-col>
+            <ion-card style="height: 700px">
+              <img src="./assets/josephPulitzer.png" />
+              <ion-card-header>
+                <ion-card-title>JOSEPH PULITZER</ion-card-title>
+              </ion-card-header>
+              <ion-card-subheader>
+                HUNGARY
+              </ion-card-subheader>
+              <ion-card-content>
+                Best known for the Pulitzer Prizes, which were established in 1917. He was American newspaper editor and publisher who helped to establish the pattern of the modern newspaper. In his time he was one of the most powerful journalists in the United States.
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+      </ion-slides>
