updated famous immigrants

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -91,6 +91,8 @@
       </ion-slide>
     </ion-slides>
     
+
+
     <ion-row>
       <ion-col>
         <div class="flex-container">
@@ -130,10 +132,10 @@
     </ion-row>
 
     <ion-content  padding>
-      <ion-slides [options]="{ slidesPerView: 'auto', scrollbar: true, zoom: false, grabCursor: true }">
+      <ion-slides [options]="{ slidesPerView: 1.75, scrollbar: true, zoom: false, grabCursor: true }">
         <ion-slide style="border: 10px">
           <ion-col>
-            <ion-card style="height: 700px">
+            <ion-card style="width: 200px">
               <img src="./assets/albertEinstein.png" />
               <ion-card-header>
                 <ion-card-title>ALBERT EINSTEIN</ion-card-title>
@@ -151,7 +153,7 @@
   
         <ion-slide style="border: 10px">
           <ion-col>
-            <ion-card style="height: 700px">
+            <ion-card style="width: 200px">
               <img src="./assets/nikolaTesla.png" />
               <ion-card-header>
                 <ion-card-title>NIKOLA TESLA</ion-card-title>
@@ -168,7 +170,7 @@
 
         <ion-slide style="border: 10px">
           <ion-col>
-            <ion-card style="height: 700px">
+            <ion-card style="width: 200px">
               <img src="./assets/bobMarley.png" />
               <ion-card-header>
                 <ion-card-title>BOB MARLEY</ion-card-title>
@@ -185,7 +187,7 @@
 
         <ion-slide style="border: 10px">
           <ion-col>
-            <ion-card style="height: 700px">
+            <ion-card style="width: 200px">
               <img src="./assets/gertyCori.png" />
               <ion-card-header>
                 <ion-card-title>GERTY CORI</ion-card-title>
@@ -202,7 +204,7 @@
 
         <ion-slide style="border: 10px">
           <ion-col>
-            <ion-card style="height: 700px">
+            <ion-card style="width: 200px">
               <img src="./assets/mariaMayner.png" />
               <ion-card-header>
                 <ion-card-title>MARIA MAYNER</ion-card-title>
@@ -219,7 +221,7 @@
 
         <ion-slide style="border: 10px">
           <ion-col>
-            <ion-card style="height: 700px">
+            <ion-card style="width: 200px">
               <img src="./assets/ceciliaPayne.png" />
               <ion-card-header>
                 <ion-card-title>CECILIA PAYNE</ion-card-title>
@@ -236,7 +238,7 @@
 
         <ion-slide style="border: 10px">
           <ion-col>
-            <ion-card style="height: 700px">
+            <ion-card style="width: 200px">
               <img src="./assets/chien-shiungWu.png" />
               <ion-card-header>
                 <ion-card-title>CHIEN-SHIUNG WU</ion-card-title>
@@ -253,7 +255,7 @@
 
         <ion-slide style="border: 10px">
           <ion-col>
-            <ion-card style="height: 700px">
+            <ion-card style="width: 200px">
               <img src="./assets/hedyLamarr.png" />
               <ion-card-header>
                 <ion-card-title>HEDY LAMARR</ion-card-title>
@@ -270,7 +272,7 @@
 
         <ion-slide style="border: 10px">
           <ion-col>
-            <ion-card style="height: 700px">
+            <ion-card style="width: 200px">
               <img src="./assets/josephPulitzer.png" />
               <ion-card-header>
                 <ion-card-title>JOSEPH PULITZER</ion-card-title>
