--- a/src/app/tablinks/tablinks.page.html
+++ b/src/app/tablinks/tablinks.page.html
@@ -4,7 +4,7 @@
       <img class="displayed"  height="32 px" width="150 px" src="./assets/logo-full.png">
     </ion-title>
     <ion-buttons slot="primary">
-      <ion-button [navPush]="settings" color="secondary">
+      <ion-button color="secondary">
         <ion-icon name="cog"></ion-icon>
       </ion-button>
       <ion-button color="secondary">
@@ -32,7 +32,7 @@
       <ion-icon name="calendar-outline"></ion-icon>
       <ion-label>Schedule</ion-label>
     </ion-tab-button>
-    
+
     <ion-tab-button tab="request-aid">
       <ion-icon name="cash-outline"></ion-icon>
       <ion-label>Request Aid</ion-label>
