--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -112,13 +112,10 @@
     <ion-row>
       <ion-col>
         <div class="flex-container">
-          <ion-subtitle>
+          <ion-title>
             IN U.S. HISTORY
-          </ion-subtitle>
+          </ion-title>
         </div>
-      </ion-col>
-      <ion-col>
-        <img src="./assets/yellowLine.png" />
       </ion-col>
     </ion-row>
     <ion-row>
@@ -139,10 +136,8 @@
               <img src="./assets/albertEinstein.png" />
               <ion-card-header>
                 <ion-card-title>ALBERT EINSTEIN</ion-card-title>
+                <ion-card-subtitle>GERMANY</ion-card-subtitle>
               </ion-card-header>
-              <ion-card-subheader>
-                GERMANY
-              </ion-card-subheader>
               <ion-card-content>
                 One of the most recognized and well-known scientists of the century.
                 His theories solved centuries-old-problems in physics and rocked even non-physicists' view of the world. E= mc2
@@ -157,10 +152,8 @@
               <img src="./assets/nikolaTesla.png" />
               <ion-card-header>
                 <ion-card-title>NIKOLA TESLA</ion-card-title>
+                <ion-card-subtitle>SERBIA</ion-card-subtitle>
               </ion-card-header>
-              <ion-card-subheader>
-                SERBIA
-              </ion-card-subheader>
               <ion-card-content>
                 Futurist who illuminated the earth electrically bright due to his immense contributions in designing the very back-bone of every modern electric supply of today – the alternating current.
               </ion-card-content>
@@ -175,9 +168,9 @@
               <ion-card-header>
                 <ion-card-title>BOB MARLEY</ion-card-title>
               </ion-card-header>
-              <ion-card-subheader>
+              <ion-card-subtitle>
                 JAMAICA
-              </ion-card-subheader>
+              </ion-card-subtitle>
               <ion-card-content>
                 Considered one of the pioneers of reggae music. Bob was a freedom fighter he used his Pen instead of gun. He fought for freedom, peace, and equal rights. Marley received The United Nations Peace Medal. Marley’s “One Love” was proclaimed as Song of the Millennium.
               </ion-card-content>
@@ -192,9 +185,9 @@
               <ion-card-header>
                 <ion-card-title>GERTY CORI</ion-card-title>
               </ion-card-header>
-              <ion-card-subheader>
+              <ion-card-subtitle>
                 CZECH
-              </ion-card-subheader>
+              </ion-card-subtitle>
               <ion-card-content>
                 Carbohydrate research not only led to the development of treatments for diabetes, it also made them winners of the 1947 Nobel Prize in physiology or medicine, and Gerty the first American woman Nobel laureate in science.
               </ion-card-content>
@@ -209,9 +202,9 @@
               <ion-card-header>
                 <ion-card-title>MARIA MAYNER</ion-card-title>
               </ion-card-header>
-              <ion-card-subheader>
+              <ion-card-subtitle>
                 GERMANY
-              </ion-card-subheader>
+              </ion-card-subtitle>
               <ion-card-content>
                 German-born American theoretical physicist, and Nobel laureate in Physics for proposing the nuclear shell model of the atomic nucleus. She was the second woman to win a Nobel Prize in physics, the first being Marie Curie.
               </ion-card-content>
@@ -226,9 +219,9 @@
               <ion-card-header>
                 <ion-card-title>CECILIA PAYNE</ion-card-title>
               </ion-card-header>
-              <ion-card-subheader>
+              <ion-card-subtitle>
                 ENGLAND
-              </ion-card-subheader>
+              </ion-card-subtitle>
               <ion-card-content>
                 Cecilia Payne discovered that stars are made largely of the two lightest chemical elements – hydrogen and helium. She was the most eminent female astronomer of her time, the first to be appointed full professor at Harvard University, and the first to chair a department.
               </ion-card-content>
@@ -243,9 +236,9 @@
               <ion-card-header>
                 <ion-card-title>CHIEN-SHIUNG WU</ion-card-title>
               </ion-card-header>
-              <ion-card-subheader>
+              <ion-card-subtitle>
                 CHINA
-              </ion-card-subheader>
+              </ion-card-subtitle>
               <ion-card-content>
                 Chinese-American nuclear physicist Chien-Shiung Wu, also known as "the First Lady of Physics,” contributed to the Manhattan Project and made history with an experiment that disproved the hypothetical law of conservation of parity.
               </ion-card-content>
@@ -260,9 +253,9 @@
               <ion-card-header>
                 <ion-card-title>HEDY LAMARR</ion-card-title>
               </ion-card-header>
-              <ion-card-subheader>
+              <ion-card-subtitle>
                 AUSTRIA
-              </ion-card-subheader>
+              </ion-card-subtitle>
               <ion-card-content>
                 Frequency hopping a way of jumping around on radio frequencies in order to avoid a third party jamming your signal. Avid inventor and the person behind advances advances in communication technology that led to today’s Wi-Fi, GPS, and Bluetooth.
               </ion-card-content>
@@ -277,9 +270,9 @@
               <ion-card-header>
                 <ion-card-title>JOSEPH PULITZER</ion-card-title>
               </ion-card-header>
-              <ion-card-subheader>
+              <ion-card-subtitle>
                 HUNGARY
-              </ion-card-subheader>
+              </ion-card-subtitle>
               <ion-card-content>
                 Best known for the Pulitzer Prizes, which were established in 1917. He was American newspaper editor and publisher who helped to establish the pattern of the modern newspaper. In his time he was one of the most powerful journalists in the United States.
               </ion-card-content>
