--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -167,10 +167,8 @@
               <img src="./assets/bobMarley.png" />
               <ion-card-header>
                 <ion-card-title>BOB MARLEY</ion-card-title>
+                <ion-card-subtitle>JAMAICA</ion-card-subtitle>
               </ion-card-header>
-              <ion-card-subtitle>
-                JAMAICA
-              </ion-card-subtitle>
               <ion-card-content>
                 Considered one of the pioneers of reggae music. Bob was a freedom fighter he used his Pen instead of gun. He fought for freedom, peace, and equal rights. Marley received The United Nations Peace Medal. Marley’s “One Love” was proclaimed as Song of the Millennium.
               </ion-card-content>
@@ -184,10 +182,8 @@
               <img src="./assets/gertyCori.png" />
               <ion-card-header>
                 <ion-card-title>GERTY CORI</ion-card-title>
+                <ion-card-subtitle>CZECH</ion-card-subtitle>
               </ion-card-header>
-              <ion-card-subtitle>
-                CZECH
-              </ion-card-subtitle>
               <ion-card-content>
                 Carbohydrate research not only led to the development of treatments for diabetes, it also made them winners of the 1947 Nobel Prize in physiology or medicine, and Gerty the first American woman Nobel laureate in science.
               </ion-card-content>
@@ -201,10 +197,8 @@
               <img src="./assets/mariaMayner.png" />
               <ion-card-header>
                 <ion-card-title>MARIA MAYNER</ion-card-title>
+                <ion-card-subtitle>GERMANY</ion-card-subtitle>
               </ion-card-header>
-              <ion-card-subtitle>
-                GERMANY
-              </ion-card-subtitle>
               <ion-card-content>
                 German-born American theoretical physicist, and Nobel laureate in Physics for proposing the nuclear shell model of the atomic nucleus. She was the second woman to win a Nobel Prize in physics, the first being Marie Curie.
               </ion-card-content>
@@ -218,10 +212,8 @@
               <img src="./assets/ceciliaPayne.png" />
               <ion-card-header>
                 <ion-card-title>CECILIA PAYNE</ion-card-title>
+                <ion-card-subtitle>ENGLAND</ion-card-subtitle>
               </ion-card-header>
-              <ion-card-subtitle>
-                ENGLAND
-              </ion-card-subtitle>
               <ion-card-content>
                 Cecilia Payne discovered that stars are made largely of the two lightest chemical elements – hydrogen and helium. She was the most eminent female astronomer of her time, the first to be appointed full professor at Harvard University, and the first to chair a department.
               </ion-card-content>
@@ -235,10 +227,8 @@
               <img src="./assets/chien-shiungWu.png" />
               <ion-card-header>
                 <ion-card-title>CHIEN-SHIUNG WU</ion-card-title>
+                <ion-card-subtitle>CHINA</ion-card-subtitle>
               </ion-card-header>
-              <ion-card-subtitle>
-                CHINA
-              </ion-card-subtitle>
               <ion-card-content>
                 Chinese-American nuclear physicist Chien-Shiung Wu, also known as "the First Lady of Physics,” contributed to the Manhattan Project and made history with an experiment that disproved the hypothetical law of conservation of parity.
               </ion-card-content>
@@ -252,10 +242,8 @@
               <img src="./assets/hedyLamarr.png" />
               <ion-card-header>
                 <ion-card-title>HEDY LAMARR</ion-card-title>
+                <ion-card-subtitle>AUSTRIA</ion-card-subtitle>
               </ion-card-header>
-              <ion-card-subtitle>
-                AUSTRIA
-              </ion-card-subtitle>
               <ion-card-content>
                 Frequency hopping a way of jumping around on radio frequencies in order to avoid a third party jamming your signal. Avid inventor and the person behind advances advances in communication technology that led to today’s Wi-Fi, GPS, and Bluetooth.
               </ion-card-content>
@@ -269,10 +257,8 @@
               <img src="./assets/josephPulitzer.png" />
               <ion-card-header>
                 <ion-card-title>JOSEPH PULITZER</ion-card-title>
+                <ion-card-subtitle>HUNGARY</ion-card-subtitle>
               </ion-card-header>
-              <ion-card-subtitle>
-                HUNGARY
-              </ion-card-subtitle>
               <ion-card-content>
                 Best known for the Pulitzer Prizes, which were established in 1917. He was American newspaper editor and publisher who helped to establish the pattern of the modern newspaper. In his time he was one of the most powerful journalists in the United States.
               </ion-card-content>
