Worked on pages

--- a/src/app/donate/donate.page.html
+++ b/src/app/donate/donate.page.html
@@ -4,3 +4,42 @@
   </ion-toolbar>
 </ion-header>
 
+
+<ion-content>
+  <ion-grid>
+    <ion-row>
+      <img src="./assets/arrow-left.png" />
+    </ion-row>
+    <ion-row>
+      <img src="./assets/arrow-right.png" />
+    </ion-row>
+    <ion-row>
+      <ion-text>
+        Inspired to Give
+      </ion-text>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-text>
+          DONATE NOW
+        </ion-text>
+      </ion-col>
+      <ion-col>
+        <img src="./assets/donation-box.png" />
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-text>
+        With your donation, we can continue to support 
+        international students with financial assistance, 
+        legal help, and job opportunities, so that they can stay and thrive in the United States.
+      </ion-text>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-button>
+          Donate
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
