--- a/src/app/find-jobs/find-jobs.page.html
+++ b/src/app/find-jobs/find-jobs.page.html
@@ -5,5 +5,47 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-row>
+    <ion-text>
+      CAREER
+    </ion-text>
+  </ion-row>
+  <ion-row>
+    <ion-text>
+      Find A job From Trusted Partners
+    </ion-text>
+  </ion-row>
+  <ion-row>
+    <ion-text>
+      These companies took the CFGI diversity 
+      pledge and are open to considering immigration 
+      sponsorships for the right candidates.
+    </ion-text>
+  </ion-row>
+  <ion-row>
+    <ion-button>
+      <ion-icon name="search-outline"></ion-icon>
+      <ion-input placeholder="job title, keywords, or company">
+      </ion-input>
+      <ion-button>
+        <ion-icon name="filter-outline"></ion-icon>
+      </ion-button>
+    </ion-button>
+  </ion-row>
+  <ion-row>
+    <ion-button>
+      <ion-icon name="location-outline"></ion-icon>
+      <ion-input placeholder="zipcode or city">
+      </ion-input>
+      <ion-text>
+        within 15 miles
+      </ion-text>
+      <ion-button>
+        <ion-icon name="caret-down-outline"></ion-icon>
+      </ion-button>
+    </ion-button>
+    <ion-button>
+      SEARCH
+    </ion-button>
+  </ion-row>
 </ion-content>
