--- a/src/app/request-aid/request-aid.page.html
+++ b/src/app/request-aid/request-aid.page.html
@@ -5,5 +5,31 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-card>
+    <ion-card-title>
+      APPLY
+    </ion-card-title>
+    <ion-card-subtitle>
+      EMERGENCY FINANCIAL ASSISTANCE
+    </ion-card-subtitle>
+    <ion-card-content>
+      For any student in need of financial assistance for
+      amenities such as transportation fees, food, and 
+      emergency housing, we have an application  for 
+      financial assistance thanks to the generosity of our donors*
+    </ion-card-content>
+    <ion-card-content>
+      *Terms and conditions apply
+    </ion-card-content>
+  </ion-card>
+  <ion-row>
+    <ion-button>
+      APPLY NOW
+    </ion-button>
+  </ion-row>
+  <ion-row>
+    <ion-button>
+      TERMS AND CONDITIONS
+    </ion-button>
+  </ion-row>
 </ion-content>
