--- a/src/app/schedule/schedule.page.html
+++ b/src/app/schedule/schedule.page.html
@@ -5,5 +5,33 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-row>
+    <ion-text>
+      Legal Services
+    </ion-text>
+  </ion-row>
+  <ion-row>
+    <ion-button>
+      <ion-icon name="calendar-clear-outline"></ion-icon>
+      View Appointment
+    </ion-button>
+  </ion-row>
+  <ion-row>
+    <ion-button>
+      <ion-icon name="calendar-clear-outline"></ion-icon>
+      Schedule with Attourneys
+    </ion-button>
+  </ion-row>
+  <ion-row>
+    <ion-button>
+      <ion-icon name="help-circle-outline"></ion-icon>
+      FAQ
+    </ion-button>
+  </ion-row>
+  <ion-row>
+    <ion-button>
+      <ion-icon name="book-outline"></ion-icon>
+      Resource Library
+    </ion-button>
+  </ion-row>
 </ion-content>
