--- a/src/app/tablinks/tablinks.page.html
+++ b/src/app/tablinks/tablinks.page.html
@@ -29,8 +29,8 @@
     </ion-tab-button>
 
     <ion-tab-button tab="schedule">
-      <ion-icon name="calendar-outline"></ion-icon>
-      <ion-label>Schedule</ion-label>
+      <ion-icon name="briefcase-outline"></ion-icon>
+      <ion-label>Legal</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="request-aid">
