made button width 100%

--- a/src/app/find-jobs/find-jobs.page.html
+++ b/src/app/find-jobs/find-jobs.page.html
@@ -23,7 +23,7 @@
     </ion-text>
   </ion-row>
   <ion-row>
-    <ion-button>
+    <ion-button style="width: 100%">
       <ion-icon name="search-outline"></ion-icon>
       <ion-input placeholder="job title, keywords, or company">
       </ion-input>
