Donate button works

--- a/src/app/donate/donate.page.html
+++ b/src/app/donate/donate.page.html
@@ -8,10 +8,10 @@
 <ion-content>
   <ion-grid>
     <ion-row>
-      <img src="./assets/arrow-left.png" />
+      <img src="./assets/arrow-left.png" style="width: 75%" />
     </ion-row>
     <ion-row>
-      <img src="./assets/arrow-right.png" />
+      <img src="./assets/arrow-right.png" style="width: 75%"/>
     </ion-row>
     <ion-row>
       <ion-text>
@@ -37,7 +37,7 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-button>
+        <ion-button href="https://www.paypal.com/donate?hosted_button_id=SXQDLBKH55C42">
           Donate
         </ion-button>
       </ion-col>
