--- a/src/app/tablinks/tablinks.page.html
+++ b/src/app/tablinks/tablinks.page.html
@@ -24,7 +24,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="find-jobs">
-      <ion-icon name="briefcase-outline"></ion-icon>
+      <ion-icon name="print-outline"></ion-icon>
       <ion-label>Find Jobs</ion-label>
     </ion-tab-button>
 
