--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,6 +4,8 @@
   <!-- Insert row to bring page content below the header -->
   <ion-row style="height: 50px"></ion-row>
 
+  <!-- Whats new Section: -->
+  <!-- Includes slides of news information -->
   <ion-text>
     WHATS NEW
   </ion-text>
@@ -26,6 +28,8 @@
     </ion-slide>
   </ion-slides>
 
+  <!-- About Us Section: -->
+  <!-- Includes a slide section for "What We Do" and "Our Founders" -->
   <ion-row>
     <ion-col>
       <div class="flex-container">
@@ -97,7 +101,8 @@
     </ion-slides>
     
 
-
+    <!-- Famous Immigrants Section: -->
+    <!-- Information transferred from the website @ cfgi.world -->
     <ion-row>
       <ion-col>
         <div class="flex-container">
@@ -149,7 +154,22 @@
             </ion-card>
           </ion-col>
         </ion-slide>
-  
+
+        <ion-slide style="border: 10px">
+          <ion-col>
+            <ion-card style="width: 200px">
+              <img src="./assets/chien-shiungWu.png" />
+              <ion-card-header>
+                <ion-card-title>CHIEN-SHIUNG WU</ion-card-title>
+                <ion-card-subtitle>CHINA</ion-card-subtitle>
+              </ion-card-header>
+              <ion-card-content>
+                Chinese-American nuclear physicist Chien-Shiung Wu, also known as "the First Lady of Physics,” contributed to the Manhattan Project and made history with an experiment that disproved the hypothetical law of conservation of parity.
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+
         <ion-slide style="border: 10px">
           <ion-col>
             <ion-card style="width: 200px">
@@ -160,6 +180,21 @@
               </ion-card-header>
               <ion-card-content>
                 Futurist who illuminated the earth electrically bright due to his immense contributions in designing the very back-bone of every modern electric supply of today – the alternating current.
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+
+        <ion-slide style="border: 10px">
+          <ion-col>
+            <ion-card style="width: 200px">
+              <img src="./assets/ceciliaPayne.png" />
+              <ion-card-header>
+                <ion-card-title>CECILIA PAYNE</ion-card-title>
+                <ion-card-subtitle>ENGLAND</ion-card-subtitle>
+              </ion-card-header>
+              <ion-card-content>
+                Cecilia Payne discovered that stars are made largely of the two lightest chemical elements – hydrogen and helium. She was the most eminent female astronomer of her time, the first to be appointed full professor at Harvard University, and the first to chair a department.
               </ion-card-content>
             </ion-card>
           </ion-col>
@@ -198,6 +233,21 @@
         <ion-slide style="border: 10px">
           <ion-col>
             <ion-card style="width: 200px">
+              <img src="./assets/josephPulitzer.png" />
+              <ion-card-header>
+                <ion-card-title>JOSEPH PULITZER</ion-card-title>
+                <ion-card-subtitle>HUNGARY</ion-card-subtitle>
+              </ion-card-header>
+              <ion-card-content>
+                Best known for the Pulitzer Prizes, which were established in 1917. He was American newspaper editor and publisher who helped to establish the pattern of the modern newspaper. In his time he was one of the most powerful journalists in the United States.
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+
+        <ion-slide style="border: 10px">
+          <ion-col>
+            <ion-card style="width: 200px">
               <img src="./assets/mariaMayner.png" />
               <ion-card-header>
                 <ion-card-title>MARIA MAYNER</ion-card-title>
@@ -209,37 +259,7 @@
             </ion-card>
           </ion-col>
         </ion-slide>
-
-        <ion-slide style="border: 10px">
-          <ion-col>
-            <ion-card style="width: 200px">
-              <img src="./assets/ceciliaPayne.png" />
-              <ion-card-header>
-                <ion-card-title>CECILIA PAYNE</ion-card-title>
-                <ion-card-subtitle>ENGLAND</ion-card-subtitle>
-              </ion-card-header>
-              <ion-card-content>
-                Cecilia Payne discovered that stars are made largely of the two lightest chemical elements – hydrogen and helium. She was the most eminent female astronomer of her time, the first to be appointed full professor at Harvard University, and the first to chair a department.
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
-        </ion-slide>
-
-        <ion-slide style="border: 10px">
-          <ion-col>
-            <ion-card style="width: 200px">
-              <img src="./assets/chien-shiungWu.png" />
-              <ion-card-header>
-                <ion-card-title>CHIEN-SHIUNG WU</ion-card-title>
-                <ion-card-subtitle>CHINA</ion-card-subtitle>
-              </ion-card-header>
-              <ion-card-content>
-                Chinese-American nuclear physicist Chien-Shiung Wu, also known as "the First Lady of Physics,” contributed to the Manhattan Project and made history with an experiment that disproved the hypothetical law of conservation of parity.
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
-        </ion-slide>
-
+        
         <ion-slide style="border: 10px">
           <ion-col>
             <ion-card style="width: 200px">
@@ -250,21 +270,6 @@
               </ion-card-header>
               <ion-card-content>
                 Frequency hopping a way of jumping around on radio frequencies in order to avoid a third party jamming your signal. Avid inventor and the person behind advances advances in communication technology that led to today’s Wi-Fi, GPS, and Bluetooth.
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
-        </ion-slide>
-
-        <ion-slide style="border: 10px">
-          <ion-col>
-            <ion-card style="width: 200px">
-              <img src="./assets/josephPulitzer.png" />
-              <ion-card-header>
-                <ion-card-title>JOSEPH PULITZER</ion-card-title>
-                <ion-card-subtitle>HUNGARY</ion-card-subtitle>
-              </ion-card-header>
-              <ion-card-content>
-                Best known for the Pulitzer Prizes, which were established in 1917. He was American newspaper editor and publisher who helped to establish the pattern of the modern newspaper. In his time he was one of the most powerful journalists in the United States.
               </ion-card-content>
             </ion-card>
           </ion-col>
