--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,12 +2,12 @@
 
 <ion-content padding>
   <!-- Insert row to bring page content below the header -->
-  <ion-row style="height: 50px"></ion-row>
+  <ion-row style="height: 75px"></ion-row>
 
   <!-- Whats new Section: -->
   <!-- Includes slides of news information -->
   <ion-text>
-    WHATS NEW
+    WHAT'S NEW
   </ion-text>
 
   <ion-slides [options]="{ slidesPerView: 1, zoom: false, grabCursor: true }" pager>
@@ -269,7 +269,7 @@
                 <ion-card-subtitle>AUSTRIA</ion-card-subtitle>
               </ion-card-header>
               <ion-card-content>
-                Frequency hopping a way of jumping around on radio frequencies in order to avoid a third party jamming your signal. Avid inventor and the person behind advances advances in communication technology that led to today’s Wi-Fi, GPS, and Bluetooth.
+                Frequency hopping: a way of jumping around on radio frequencies in order to avoid a third party jamming your signal. Avid inventor and the person behind advances advances in communication technology that led to today’s Wi-Fi, GPS, and Bluetooth.
               </ion-card-content>
             </ion-card>
           </ion-col>
