--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -33,3 +33,17 @@
 ion-card {
   color: navy;
 }
+
+#slide_Version2 {
+  width: 400px; 
+  border: 10px;
+}
+
+#built_in_America{
+  width: 375px; 
+  border: 10px;
+}
+
+ion-row {
+  height: 50px
+}
