--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,7 +3,7 @@
 
 /** Ionic CSS Variables **/
 :root {
-  --ion-background-color: #EEEEEE;
+  --ion-background-color: #ffffff;
   --ion-toolbar-background: #ffffff;
   --ion-tab-bar-background: #ffffff;
   --ion-card-background: #ffffff;
