--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -30,6 +30,13 @@
   text-decoration: none;
 }
 
+
+
+ion-slides {
+  --bullet-background: #A9A9A9;
+  --bullet-background-active: #F18C7F;
+}
+
 ion-card {
   color: navy;
 }
@@ -44,6 +51,241 @@ ion-card {
   border: 10px;
 }
 
+#about_us_title{
+  @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
+  font-family: 'Oxygen', sans-serif;
+  position: absolute;
+  width: 100%;
+  height: 32px;
+  left: 50%;
+
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 32px;
+  /* identical to box height, or 178% */
+  letter-spacing: 3px;
+  text-transform: uppercase;
+
+  color: #F18C7F;
+}
+
+#meet_text{
+  width: 114px;
+  height: 32px;
+  position: relative;
+  float: right;
+  left: 37%;
+  
+
+  @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
+  font-family: 'Oxygen', sans-serif;
+  font-weight: 700;
+  color: #F18C7F;
+  font-size: 18px;
+  letter-spacing: 3px;
+}
+
+#founders_decor{
+  position: relative;
+  right: -1%;
+  top: 15px;
+  float: right;
+}
+
+#founders_text{
+  left: 39%;
+
+  font-family: Righteous;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 32px;
+  line-height: 40px;
+  text-align: center;
+
+  /* Gray 1 */
+  color: #333333;
+  }
+
+#sophie_img{
+  position: absolute;
+  width: 154px;
+  height: 154px;
+  left: 50%;
+  top: 29%;
+
+  filter: drop-shadow(0px 40px 40px rgba(0, 0, 0, 0.25));
+  border-radius: 109px;
+}
+
+#david_img{
+  position: absolute;
+  width: 154px;
+  height: 154px;
+  left: 1%;
+  top:8%;
+
+  filter: drop-shadow(0px 40px 40px rgba(0, 0, 0, 0.25));
+  border-radius: 123px;
+}
+
+#sopie_text{
+  position: absolute;
+  width: 90px;
+  height: 15px;
+  left: 60%;
+  top: 77%;
+
+  @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
+  font-family: 'Oxygen', sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 32px;
+  /* or 200% */
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+
+  color: #FF6059;
+}
+
+#david_text{
+  position: absolute;
+  width: 108.71px;
+  height: 29px;
+  left: 10%;
+  top: 55%;
+
+  @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
+  font-family: 'Oxygen', sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 32px;
+  /* or 200% */
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+
+  color: #FF564F;
+}
+
+#wavy_lines{
+  position: relative;
+  left: -7%;
+  top: 15px;
+  float: left
+}
+
+#famous_immigrants_title{
+  width: 208px;
+  height: 25px;
+  left: 92px;
+  top: 1627px;
+
+  @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
+  font-family: 'Oxygen', sans-serif;
+  font-weight: 700;
+  color: #FF564F;
+  font-size: 14px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+}
+
+#in_history_title{
+  position: absolute;
+  width: 240px;
+  height: 40px;
+  left: 17%;
+  
+  @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+  font-family: 'Righteous', normal;
+  font-weight: normal;
+  color: #FFFFFF;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #333333;
+  font-size: 32px;
+  text-transform: uppercase;
+}
+
+#in_history2_title{
+  position: absolute;
+  width: 288px;
+  height: 34px;
+  top: 10px;
+  left: 11.4%;
+
+  @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+  font-family: 'Righteous', normal;
+  font-weight: normal;
+  font-size: 32px;
+  line-height: 40px;
+  /* or 125% */
+  text-transform: uppercase;
+
+  color: #333333;
+}
+
+#famous_immigrants_description{
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  color: #333333;
+  font-size: 12px;
+}
+
+#immigrant_title{
+  @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
+  font-family: 'Oxygen', sans-serif;
+  font-weight: 700;
+  color: #FF564F;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+#immigrant_subtitle{
+  @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
+  font-family: 'Oxygen', sans-serif;
+  font-weight: 500;
+  color: #333333;
+  font-size: 8px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  padding: 8px;
+}
+
+#immigrant_content{
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-style:italic;
+  color: #333333;
+  font-size: 10px;
+}
+
+ion-title {
+  @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
+  font-family: 'Oxygen', sans-serif;
+  color: #F18C7F;
+  font-size: 1.2rem;
+}
+
+ion-card-title {
+  @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+  font-family: 'Righteous', normal;
+  font-weight: 400;
+  font-size: 32px;
+  color: #333333;
+}
+
+ion-card-content {
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  color: #333333;
+}
+
 ion-row {
-  height: 50px
+  height: 50px;
+  text-align: center
 }
