Updated homepage to match figma

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -159,6 +159,13 @@
       <img id = "wavy_lines" src="./assets/wavyLines.png" />
     </ion-col>
   </ion-row>
+  <ion-row>
+    <ion-col>
+      <div class="flex-container">
+        <img style="position:absolute; top:-10%; width:100%" src="./assets/sunrise_shape.png" />
+      </div>
+    </ion-col>
+  </ion-row>
   <ion-row style="height: 20px">
     <ion-col>
       <ion-text id = "famous_immigrants_title">
@@ -186,7 +193,7 @@
     </ion-col>
   </ion-row>
 
-  <ion-row style="height: 600px; text-align: auto">
+  <ion-row style="position: relative; top: 5%; height: 600px; text-align: auto">
     <ion-slides [options]="{ slidesPerView: 2, zoom: true, grabCursor: true }" pager>
       <ion-slide style="border: 5px">
         <ion-col>
